# andrenho

./: 1.sav  IDEAS.md  ProjectHome.md  README.md
8bitsprite/: Makefile.in  config.h.in  configure  configure.ac
8bitsprite/data/: Makefile.in
8bitsprite/src/: Makefile.am  Makefile.in  args.c  args.h  editor.c  imageset.c  imageset.h  imageset_io.c  imagesetui.c  imagesetui.h  main.c  util.c  util.h
_done/8bitsprite/: configure
_done/mapa_sp/: cities.txt
_done/xdock/: API  HACKING  Makefile.in  configure.ac
_old/city/: doc.txt
_old/city_go/: ui.go
_old/city_py/: doc.txt
_old/citymayor/: build.sh
_old/cociv/: TODO
_old/fcca_go/: land.go  landunit.go  nation.go  static.go
_old/fccalua/: doc.txt  mesopcurses.lua
_old/gunix/: basename.go  doc.txt
_old/pathfinding/: pathfinding.d
_old/quotephoto/: originals.txt
_old/recipes/: main.py
_old/recipes2/: recipes.yaml
_old/schemagic/: schemagic.ps
_old/simplelife/: vida_simples.text
_old/tilegame/: test.c  tilegame.h
_old/trader/: world.rb
_old/wallpaper/: Makefile
aw68/: aw68k.js  index.html
cgfont/: cgmono5.bdf  gen_cg.c  size5.xpm  size7.xpm  unnamed1.bdf
chiptune/: test.xm
city/: citymanager.py
city_go/: main.go
city_lua/: main.lua
city_py/: building.py  city.py
citymayor/: build.sh
cityscape/: Makefile
cociv/: TODO  cociv.rb  cociv_server.rb
conf/: _Xresources  _bashrc  _gitconfig  _i3status.conf  _tmux.conf  _vimrc  _xinitrc  nethackrc  packages.txt  xterm-andre.vim
crescent/: Makefile  crescent
csreference/: calculo.tex  csreference.tex
dcity/: build.bat  dcity.d  dsss.conf
doc/: doc.txt  simplicity.txt  tags
dumbterm/: Makefile  filter.h  filter_inexact.cc  filter_inexact.h  filter_scanline.cc  font.cc  main.cc  options.cc  options.h  screen.cc  screen.h  terminal.cc  terminal.h
eletronica/: eletronica.tex
eprofile/: catalog-v001.xml  communicator.py  dummy.py  eprofile.py  rules.xml  webservice.py  webservices.py
fcca_go/: landunit.go  nation.go  tile.go  unit.go
fccalua/: Makefile  coccurses.lua  console.lua  cradle.lua  doc.txt  fcca.lua  fcca_curses.c  fccacurses.c  game.lua  map.lua  mesopcurses.lua  static.lua  tileset.c  town.lua  ts.lua  units.lua  util.lua
fccaruby/: cociv.rb  fccacurses.rbw
fccax/: context.py  fc_worldbuild
goonix/: dm.go  fs.go  fs2.go  goonix.go  ss.go
gunix/: basename.go  cal.go
imaginarymap/: doc.txt
kindle/: kindle.sh
livro/: 1.txt
luasdl/: Makefile  libluasdl.c  test.lua
mapa_sp/: map.py
newhope/: AUTHORS  HACKING  INSTALL  Makefile  config.mk  findleaks.sh  main.c  main.cc
paintings/: download.sh
palm/: Makefile  buscacliente.cpp  buscacliente.h  database.h  dbcliente.h  form.cpp  form.h  forms.h  main.cpp  make.bat  padrao.cpp  padrao.h  palm.h  pedido.cpp  pedido.h  pedidos.h  pedidos.rcp
pycity/: city.py  gui.py  main.py  moveable.py  person.py
quotephoto/: Makefile  originals.txt
receitas/: afazer.txt  arroz.txt  bolachinas.txt  caldo_legumes.txt  lowcarb.txt  massa_caseira.txt  mingau.txt  outras_receitas.txt  pao_integral.txt  salmao.txt
recipes/: data.py
recipes2/: recipes.py
schemagic/: aw_101_alarm.ps  schemagic.ps  test.ps
simplelife/: organizacao.txt  simple_living.mm
speeches/: speeches.html  speeches.rb  speeches.tex  speeches.yaml
tilegame/: CMakeLists.txt  Makefile  test.c  tilegame.c  tilegame.h
tilegame/temp/: tilegame.c
tilegame/terminal/: index.rc  terminal.rc
tiny/: pptoken.dot
tmp/: application.cc  basic.cc  test2_vs.glsl  test3.cc  test3_fs.glsl
trader/: Makefile  carmodel.h  city.cc  city.rb  main.c  player.rb  travel.h  truck.rb  ui.h  world.c  world.rb
traducoes/: autonomia.txt  muito_barulho.txt
trunk/: 1.sav  teste.txt  vim.todo
trunk/8bitsprite/: Makefile.in  config.h.in  configure  configure.ac
trunk/8bitsprite/data/: Makefile.am  Makefile.in
trunk/8bitsprite/src/: Makefile.am  Makefile.in  args.c  args.h  editor.c  editor.h  imageset.c  imageset.h  imagesetui.c  main.c  util.c  util.h
trunk/_done/8bitsprite/: configure.ac
trunk/_done/8bitsprite/data/: Makefile.in
trunk/_done/8bitsprite/src/: imageset.c  imageset.h  imagesetui.c  main.c
trunk/_done/xdock/src/lib/: Makefile.am
trunk/tilegame/: CMakeLists.txt  Makefile  test.c  tilegame.c  tilegame.h  tilegame.txt
trunk/xdock/src/server/: Makefile.am  Makefile.in  client.c  client.h  client.rb  debug.c  debug.h  font_lcd3.xpm  font_led.c  font_led.h  font_led20.xpm  font_led3.xpm  font_led4.xpm  main.c  network.c  network.h  options.c  options.h  panel.c  parser.c  parser.h  structures.h  window.c  window.h  x11.c  x11.h  x11_cmd.c  x11_cmd.h  x11_util.c  x11_util.h  x11_xpm.c  x11_xpm.h
vinterm/: Makefile  chars.cc  chars.h  console.h  filter_bright.cc  filter_bright.h  filter_inexact.cc  filter_scanline.h  main.cc  options.cc  screen.cc  screen.h  terminal.cc  terminal.h  vinterm.supp
wallpaper/: wallaper.yaml  wallpaper.rb  wallpaper.yaml  wp.c  wpaper.lua
worker/: Makefile  level.c  level.rb  main.c  object.h  object.rb  uicurses.rb  worker.rb
xdock/: Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
xdock/doc/: developer.html  index.html  protocol.txt  tutorial.html  xdock.xml
xdock/doc/example/fonts/: Thumbs.db
xdock/doc/example/ideas/: Thumbs.db  ideas.txt
xdock/doc/example/protocol/advanced/: Thumbs.db
xdock/doc/example/themes/: Thumbs.db
xdock/man/man1/: xdockserver.1
xdock/share/: Makefile.am  Makefile.in  themes.rc
xdock/src/: Makefile.am  Makefile.in
xdock/src/docks/: Makefile.am  Makefile.in  xdcalendar.c  xdclock.c  xdhello.c  xdmemory.c
xdock/src/lib/: Makefile.in  libxdock.c  network.c  network.h  xdock.h
xdock/src/server/: Makefile.am  Makefile.in  client.c  client.h  client.rb  debug.c  font_lcd3.xpm  font_led.c  font_led.h  font_led2.xpm  font_led20.xpm  font_led4.xpm  font_led5.xpm  font_led5l.xpm  font_led7.xpm  main.c  network.c  network.h  options.c  options.h  panel.c  parser.c  parser.h  window.c  window.h  x11.c  x11.h  x11_cmd.c  x11_cmd.h  x11_util.c  x11_util.h  x11_xpm.c  x11_xpm.h
(+2151 files in other folders)
